feat(setup): package - add gh-pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "my-app",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://trongtrinh.github.io/hinata",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -9,14 +10,16 @@
         "lint": "next lint",
         "lint:fix": "next lint --fix",
         "format": "prettier --check --ignore-path .gitignore .",
-        "format:fix": "prettier --write --ignore-path .gitignore ."
+        "format:fix": "prettier --write --ignore-path .gitignore .",
+        "predeploy": "yarn build",
+        "deploy": "gh-pages -d build"
     },
     "dependencies": {
-        "css-animation": "^2.0.4",
         "@fullpage/react-fullpage": "^0.1.31",
         "@prisma/client": "2.30.3",
         "axios": "^1.2.1",
         "classnames": "^2.3.2",
+        "css-animation": "^2.0.4",
         "dayjs": "^1.11.7",
         "gsap": "^3.11.3",
         "lint-staged": "^13.1.0",
@@ -27,12 +30,12 @@
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.40.0",
-        "react-responsive": "^9.0.2",
-        "sharp": "0.31.1",
         "react-modal": "^3.16.1",
         "react-multi-carousel": "^2.8.2",
+        "react-responsive": "^9.0.2",
         "react-scroll": "^1.8.8",
         "react-slick": "^0.29.0",
+        "sharp": "0.31.1",
         "slick-carousel": "^1.8.1",
         "styled-components": "^5.3.6",
         "swr": "^2.0.0",
@@ -51,10 +54,12 @@
         "@types/react-slick": "^0.23.10",
         "@types/styled-components": "^5.1.26",
         "@typescript-eslint/eslint-plugin": "^5.46.1",
+        "@typescript-eslint/parser": "^5.47.0",
         "autoprefixer": "^10.4.13",
         "babel-plugin-inline-react-svg": "^2.0.1",
         "eslint": "^8.27.0",
         "eslint-config-prettier": "^8.5.0",
+        "gh-pages": "^4.0.0",
         "husky": "^8.0.2",
         "lighthouse": "^9.6.8",
         "postcss": "^8.4.18",
