--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "autoprefixer": "^10.4.13",
         "babel-plugin-inline-react-svg": "^2.0.1",
         "eslint": "^8.27.0",
+        "eslint-config-next": "^13.1.1",
         "eslint-config-prettier": "^8.5.0",
         "gh-pages": "^4.0.0",
         "husky": "^8.0.2",
